--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <project.build.sourceEncoding>${encoding.type}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding.type}</project.reporting.outputEncoding>
         <file.encoding>${encoding.type}</file.encoding>
+
+        <type.browser>{app.type.browser}</type.browser>
+        <type.driver>{app.type.driver}</type.driver>
+        <type.version>{app.type.version}</type.version>
+
     </properties>
 
     <dependencies>
@@ -126,6 +131,13 @@
                         <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
                     </systemPropertyVariables>
                 </configuration>
+            </plugin>
+
+
+            <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
             </plugin>
 
         </plugins>
