--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 selenoid.url = http://149.154.71.152:4444/wd/hub
 
-app.type.browser = ${app.type.browser}
-app.type.driver = ${app.type.driver}
-app.type.version = ${app.type.version}
+#app.type.browser = ${app.type.browser}
+#app.type.driver = ${app.type.driver}
+#app.type.version = ${app.type.version}
