--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,1 @@
-selenoid.url = http://149.154.71.152:4444
-#  selenoid.url = http://149.154.71.152:4444/wd/hub
+selenoid.url = http://149.154.71.152:4444/wd/hub
